--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { ViewTransitions } from "astro:transitions";
+import { ClientRouter } from "astro:transitions";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import '../styles/global.css';
@@ -15,7 +15,7 @@ const { title = "TradeAnchor AI", description = "Strategic Wealth Optimization f
     <meta name="description" content={description} />
     <title>{title}</title>
 
-    <ViewTransitions />
+    <ClientRouter />
     <link rel="stylesheet" href="/src/styles/global.css" />
   </head>
 
